@startuml

title __EXAM_REG's Class Diagram__\n

  namespace com.example.exam_reg {
    class com.example.exam_reg.AccountRegisterActivity {
        - btnRegister : Button
        - existUsernameList : String[]
        - intent : Intent
        - password : EditText
        - username : EditText
        + onClick()
        + register()
        # onCreate()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.ExamListActivity {
        - eduImgList : int[]
        - eduList : ArrayList<Map<String, Object>>
        - eduNameList : String[]
        - eduNamePinYinList : String[]
        - listView : ListView
        - simpleAdapter : SimpleAdapter
        - username : String
        # onCreate()
        - bindEvent()
        - getData()
        - initData()
        - initView()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.ExamRegisterActivity {
        {static} + instance : AppCompatActivity
        {static} + reqWithRegisterInfoCheck : int
        - btnRegister : Button
        - exam_type : String
        - school : String[]
        - schoolSN : String[]
        - spinnerMajor : Spinner
        - spinnerSchool : Spinner
        - spinnerTeacher : Spinner
        - username : String
        # onActivityResult()
        # onCreate()
        - bindData()
        - bindEvent()
        - getData()
        - getRandomInt()
        - initData()
        - initView()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.HomeActivity {
        - btnReturn : Button
        - existUsernameList : String[]
        - newUsername : EditText
        - toNewUsername : String
        - username : String
        + changeUsername()
        # onCreate()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.MainActivity {
        {static} + accounts : HashMap<String, String>
        {static} + reqWithHome : int
        {static} + reqWithRegister : int
        - exit : Button
        - login : Button
        - password : EditText
        - register : Button
        - username : EditText
        # onActivityResult()
        # onCreate()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.RegisterInfoCheckActivity {
        - btnContinue : Button
        - btnReturn : Button
        - major : String
        - school : String
        - teacher : String
        - txtMajor : TextView
        - txtSchool : TextView
        - txtTeacher : TextView
        # onCreate()
        - bindData()
        - getData()
        - initView()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.RegisterSuccessActivity {
        - btnReturn : Button
        - txtRegisterID : TextView
        # onCreate()
        - bindData()
        - bindEvent()
        - getRandomInt()
        - initView()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.WelcomeActivity {
        # onCreate()
    }
  }
  

  com.example.exam_reg.AccountRegisterActivity .up.|> android.view.View.OnClickListener
  com.example.exam_reg.AccountRegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.ExamListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.ExamRegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.RegisterInfoCheckActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.RegisterSuccessActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
